
  * Reworked buildd concept.
    - Now we have a seperate
      /usr/share/grml-live/buildd/functions.sh for generic stuff
      and /etc/grml/grml-buildd.conf as configuration file.
    - Use grml-buildd.{stdout,stderr} instead of
      grml-live.{stdout,stderr} as log files.
    - buildd/functions.sh: do not mv files if there was an error
      during grml-live execution
  * Added new grml-repository named grml-live which is intented
    to fix issues from Debian for grml-live builds. It is automatically
    activated if you are building against unstable/sid and should
    be used manually only if you realy know what you are doing. :)
  * Use apt-pinning via /etc/grml/fai/config/hooks/instsoft.GRMLBASE
    already and remove it from /etc/grml/fai/config/scripts/GRMLBASE/33-aptsetup
  * Display version number of grml-live.
  * Log executed grml-live command line.
  * Set FAI_DEBOOTSTRAP_OPTS="--exclude=dhcp-client,info"
    by default.
  * Set $SECONDS to unknown if $start_seconds is not set.
  * Improve directory handling for $LOGFILE.
  * Add new packages to GRML_FULL:
    - ldnsutils
    - madwifi-modules-2.6.23-grml
  * Update kernel version of GRML_MEDIUM to 2.6.23-grml as well.
  * Use new kernel version 2.6.23-grml64 for amd64.
  * Add 'ed' to GRML_SMALL and GRML_MEDIUM.

 -- Michael Prokop <mika@grml.org>  Sat, 20 Oct 2007 12:12:33 +0200

grml-live (0.0.6) unstable; urgency=low

  * New option "-a" for setting architecture. This allows building
    grml(32) on amd64.
  * Fix stderr redirection in "/usr/sbin/fai already running..."
  * Update /etc/grml/fai/make-fai-nfsroot.conf
  * Use /var/log/fai/dirinstall/${HOSTNAME}/grml-live.log as logfile
    for grml-live instead of /var/log/grml-live.log so it's easier
    to track.
  * Update of buildd scripts: main configuration file main.sh
    which provides all the build stuff inside separate functions.
  * Fall back to blackhole.pca.dfn.de as keyserver if retreiving
    from subkeys.pgp.net fails.