@@ -4,7 +4,7 @@
 # Authors:       grml-team (grml.org), (c) Michael Prokop <mika@grml.org>
 # Bug-Reports:   see http://grml.org/bugs/
 # License:       This file is licensed under the GPL v2 or any later version.
-# Latest change: Thu Oct 18 19:47:14 CEST 2007 [mika]
+# Latest change: Fri Oct 26 01:22:30 CEST 2007 [mika]
 ################################################################################
 
 set -u
@@ -38,8 +38,10 @@ fi
 sed -i 's/^root::/root:*:/'            $target/etc/shadow
 sed -i "s/^$USERNAME:!:/$USERNAME:*:/" $target/etc/shadow
 
-$ROOTCMD chsh -s /bin/zsh root
-$ROOTCMD chsh -s /bin/zsh $USERNAME
+if [ -r $target/bin/zsh ] ; then
+   $ROOTCMD chsh -s /bin/zsh root
+   $ROOTCMD chsh -s /bin/zsh $USERNAME
+fi
 
 ## END OF FILE #################################################################
 # vim:ft=sh expandtab ai tw=80 tabstop=4 shiftwidth=3
